--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -71,7 +71,7 @@
 					</a>
 				</li>
 				<li class="sidebar-item">
-					<a class="sidebar-link" href="/Admin/TinTucBaiViet/TinTucBaiViet" id="get-url" aria-expanded="false">
+					<a class="sidebar-link" href="/Admin/FAQS/FAQS" id="get-url" aria-expanded="false">
 						<span>
 							<iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
 						</span>
