--- a/WebAppService/Areas/Admin/Views/FAQS/FAQS.cshtml
+++ b/WebAppService/Areas/Admin/Views/FAQS/FAQS.cshtml
@@ -13,28 +13,18 @@
     }
 </style>
 @section Scripts {
-    <script src="~/ajax/webappservice.danhmuchethong.js?v=1.2"></script>
+    <script src="~/ajax/webappservice.faqs.js?v=1.2"></script>
 }
 
 <div class="card-header">
-    <h4 class="card-title">Danh mục hệ thống</h4>
+    <h4 class="card-title">Câu hỏi thường gặp</h4>
 </div>
 <div class="card-body">
     <div class="row">
         <div class="col-lg-6 d-flex align-items-stretch">
             <div class="card w-100 border position-relative overflow-hidden">
-                <div class="form-group col-sm-12 p-1">
-                    <label class="fs-2 form-label m-0">Phân loại:<font class="text-danger">*</font> </label>
-                    <select class="form-control" id="LoaiDanhMuc">
-                        <option value="">-- Chọn phân loại --</option>
-                        <option value="Danh mục chức danh">Danh mục chức danh</option>
-                        <option value="Danh mục nhóm bài viết">Danh mục nhóm bài viết</option>
-                        <option value="Danh mục bài đăng">Danh mục bài đăng</option>
-                        <option value="Danh mục loại câu hỏi">Danh mục loại câu hỏi</option>
-                    </select>
-                </div>
                 <div class="card-body p-2 pt-0">
-                    <table id="tableDanhMucHeThong"
+                    <table id="tableCauHoi"
                            data-toggle="table"
                            data-pagination="true"
                            data-page-size="10"
@@ -42,8 +32,9 @@
                            data-search="true">
                         <thead>
                             <tr>
-                                <th data-field="thuTuTg" data-sortable="true">Số thứ tự</th>
-                                <th data-field="tenGoi" data-sortable="true">Tên gọi</th>
+                                <th data-field="soThuTu" data-sortable="true">Thứ tự</th>
+                                <th data-field="cauHoi" data-sortable="true">Câu hỏi</th>
+                                <th data-field="cauTraLoi" data-sortable="true">Câu trả lời</th>
                                 <th data-field="ghiChu" data-sortable="true">Ghi chú</th>
                             </tr>
                         </thead>
@@ -66,14 +57,18 @@
                         </button>
                     </div>
                     <div class="form-group p-3">
-                        <input type="hidden" id="IdHeThong" />
+                        <input type="hidden" id="IdFaqs" />
                         <div class="mb-3">
                             <label class="form-label">Số thứ tự</label>
-                            <input type="number" id="ThuTuTG" class="form-control" placeholder="1,2,3...">
+                            <input type="number" id="SoThuTu" class="form-control" placeholder="1,2,3...">
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Tên gọi</label>
-                            <input type="text" id="TenGoi" class="form-control">
+                            <label class="form-label">Câu hỏi</label>
+                            <input type="text" id="CauHoi" class="form-control">
+                        </div>
+                        <div class="mb-3"></div>
+                            <label class="form-label">Câu trả lời</label>
+                            <textarea type="text" id="CauTraLoi" class="form-control" placeholder="Nhập câu trả lời ..." rows="3"></textarea>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Ghi chú</label>
