--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -70,6 +70,14 @@
 						<span class="hide-menu">Tin tức,Bài viết</span>
 					</a>
 				</li>
+				<li class="sidebar-item"></li>
+					<a class="sidebar-link" href="/Admin/DichVu/DichVu" id="get-url" aria-expanded="false">
+						<span>
+							<iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
+						</span>
+						<span class="hide-menu">Dịch vụ</span>
+					</a>
+				</li>
 				<li class="sidebar-item">
 					<a class="sidebar-link" href="/Admin/FAQS/FAQS" id="get-url" aria-expanded="false">
 						<span>
